# input-viz

./: README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  type.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
