[package]
name = "input-viz"
version = "0.1.0"
description = "input-viz displays keystrokes and mouse actions directly on your desktop"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "input_viz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# rdev = { version = "*", features = ["serialize"] }
# https://github.com/Narsil/rdev/pull/153
rdev = { git = "https://github.com/ahaoboy/rdev", branch = "patch-1", features = [
  "serialize",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-positioner = "2"
tauri-plugin-updater = "2"

[profile.release]
debug = false
lto = true
strip = true
opt-level = "s"
codegen-units = 1

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = 'release'
