[package]
name = "input-viz"
version = "0.1.1"
description = "input-viz displays keystrokes and mouse actions directly on your desktop"
authors = ["ahaoboy"]
edition = "2024"
license = "MIT"
repository = "https://github.com/ahaoboy/input-viz"
homepage = "https://github.com/ahaoboy/input-viz"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "input_viz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# rdev = { version = "*", features = ["serialize"] }
# https://github.com/Narsil/rdev/pull/153
rdev = { git = "https://github.com/Narsil/rdev", features = ["serialize"] }

# https://github.com/ebarnard/rust-plist/issues/151
deranged = "=0.4.0"


[profile.release]
debug = false
lto = true
strip = true
opt-level = "s"
codegen-units = 1

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = 'release'

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
